<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:id="@menu/mainmenu" android:enabled="true">
		<item android:id="@+id/AddResult" android:title="@string/AddResName"
			android:icon="@android:drawable/ic_menu_add">
		</item>
		<item android:id="@+id/ViewStats" android:title="@string/ViewStatName"
			android:icon="@android:drawable/ic_menu_view">
		</item>
		<item android:enabled="true" android:title="@string/analysisTitle" 
			android:id="@+id/Analysis"
			android:icon="@android:drawable/ic_menu_help">
		</item>
		<item android:id="@+id/exportDB" android:title="@string/exportDB"
			android:icon="@android:drawable/ic_menu_upload">
		</item>		
		<item android:id="@+id/importDB" android:title="@string/importDB" android:icon="@android:drawable/ic_menu_info_details">
		</item>
		<item android:id="@+id/AddGame" android:title="@string/AddGameName" 
			android:icon="@android:drawable/ic_menu_add">
		</item>
		<item android:id="@+id/About" android:title="@string/aboutName"
			android:icon="@android:drawable/ic_menu_info_details">
		</item>
		
	</group>
	
</menu>
