<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dip">
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/applabl" android:textSize="20sp" android:textStyle="bold"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/appdescrip"
        />
 	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textSize="16sp" android:text=" "/>       
 	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/appVerLabel" android:textSize="20sp" android:textStyle="bold"/>       
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/appVer"
        />
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textSize="16sp" android:text=" "/> 
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/appContact" android:textSize="20sp" android:textStyle="bold"/>       
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/appContVal"
        />
</LinearLayout>
