<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	 xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dip"
    android:id="@+id/about_display">
    <ScrollView android:id="@+id/ScrollView01" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TableLayout 
			android:id="@+id/TableLayout01" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content">
			<TableRow 
				android:id="@+id/TableRow01" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/applabl" 
					android:textSize="20sp" 
					android:textStyle="bold"
					/>		
			</TableRow>		
			<TableRow 
				android:id="@+id/TableRow01" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			    <TextView
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:textSize="16sp"
			        android:text="@string/appdescrip"
			        />
			</TableRow>
			<TableRow 
				android:id="@+id/TableRow01" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			 	<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textSize="16sp" 
					android:text=" "
					/>
			</TableRow>
			<TableRow 
				android:id="@+id/TableRow01" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			 	<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/appVerLabel" android:textSize="20sp" android:textStyle="bold"
					/> 
			</TableRow>	
			<TableRow 
				android:id="@+id/TableRow01" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			    <TextView
			    	android:id="@+id/AppVersion"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:textSize="16sp"
			        android:text="@string/appVer"
			        />
			</TableRow>
			<TableRow 
				android:id="@+id/TableRow01" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			 	<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textSize="16sp" android:text=" "
					/>
			</TableRow>
			<TableRow 
				android:id="@+id/TableRow01" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			 	<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/dbVersionLabel" android:textSize="20sp" android:textStyle="bold"
					/> 
			</TableRow>
			<TableRow 
				android:id="@+id/TableRow01" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			    <TextView
			    	android:id="@+id/dbVersionId"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:textSize="16sp"
			        android:text="@string/dbVersion"
			        />
			</TableRow>
			<TableRow 
				android:id="@+id/TableRow01" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textSize="16sp" android:text=" "
					/>
			</TableRow>
	<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content"
		android:layout_height="wrap_content">
	</TableRow>
	<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content"
		android:layout_height="wrap_content">
	</TableRow>
	<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content"
		android:layout_height="wrap_content">
	</TableRow>		
			<TableRow 
				android:id="@+id/TableRow01" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">

				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/appContact" 
					android:textSize="20sp" 
					android:textStyle="bold"
					/>
			</TableRow>
			<TableRow 
				android:id="@+id/TableRow01" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			    <TextView
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:textSize="16sp"
			        android:text="@string/appContVal"
			        />
			</TableRow>
			<TableRow 
				android:id="@+id/TableRow01" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textSize="16sp" android:text=" "
					/> 
			</TableRow>		
			<TableRow 
				android:id="@+id/TableRow01" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
				<TextView
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/appNote" android:textSize="20sp" android:textStyle="bold"
			        />
			</TableRow>
			<TableRow 
				android:id="@+id/TableRow01" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
				<TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="16sp"
			        android:text="@string/appNoteVal"
			        />
        	</TableRow>
			<TableRow 
				android:id="@+id/TableRow01" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textSize="16sp" android:text=" "
					/> 
			</TableRow>
			<TableRow 
				android:id="@+id/TableRow01" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textSize="16sp" android:text=" "
					/> 
			</TableRow>
    <Button android:layout_width="wrap_content" 
		android:id="@+id/dispRelNotes" 
		android:layout_height="wrap_content" 
		android:text="@string/dispRelNotes">
	</Button>
	</TableLayout>
	</ScrollView>
</LinearLayout>
