<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
	<TableLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:gravity="top"
		android:id="@+id/topTable">
		<TableRow android:layout_width="fill_parent">
  			<TextView android:layout_gravity="left|center_vertical" android:text="@string/gameType"/>
			<EditText android:layout_width="fill_parent" android:inputType="text" android:id="@+id/gameName" android:width="150sp"/>
		</TableRow>
		<TableRow android:layout_width="fill_parent">
  			<TextView android:layout_gravity="left|center_vertical" android:text="@string/gameDescr"/>
			<EditText android:layout_width="fill_parent" android:inputType="text" android:id="@+id/gameDescr"/>
		</TableRow>
		<Button android:width="150sp" 
			android:layout_width="wrap_content"
			android:id="@+id/AddGBtn" 
			android:layout_height="wrap_content" android:text="@string/add">
		</Button>
	</TableLayout>
</LinearLayout>
